Writing apis.yml

--- a/apis.yml
+++ b/apis.yml
@@ -1,29 +1,8 @@
-name: Proompty
-description: >-
-  Proompty is an advanced Retrieval Augmented Generation (RAG) API designed to
-  empower users in seamlessly integrating their data and harnessing the power of
-  customized Large Language Model (LLM) prompts for interactive communication.
-  At its core, Proompty operates through a series of interconnected
-  functionalities that enable users to navigate and manipulate their data
-  effectively.
-image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+aid: proompty
 url: https://raw.githubusercontent.com/api-search/ai/main/_apis/proompty/apis.md
-created: '2024-06-06T00:00:00.000Z'
-modified: '2024-06-06T00:00:00.000Z'
-specificationVersion: '0.18'
-tags: []
 apis:
-  - name: Proompty
-    description: >-
-      Proompty is an advanced Retrieval Augmented Generation (RAG) API designed
-      to empower users in seamlessly integrating their data and harnessing the
-      power of customized Large Language Model (LLM) prompts for interactive
-      communication. At its core, Proompty operates through a series of
-      interconnected functionalities that enable users to navigate and
-      manipulate their data effectively.
-    image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
-    humanURL: https://app.proompty.com/docs/api
-    baseURL: https://app.proompty.com/api/
+  - aid: proompty:proompty
+    name: Proompty
     tags:
       - Absence
       - Associated
@@ -154,19 +133,51 @@ apis:
       - Maximum
       - Numbers
       - Reached
-    properties:
-      - type: Documentation
-        url: https://app.proompty.com/docs/api
-      - type: OpenAPI
-        url: openapi/proompty-openapi-original.yml
-    aid: proompty:proompty
+    image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
     score: 553
+    baseURL: https://app.proompty.com/api/
+    humanURL: https://app.proompty.com/docs/api
+    overlays:
+      - url: overlays/proompty-openapi-api-evangelist-ratings.yml
+        type: API Evangelist Ratings
+    properties:
+      - url: https://app.proompty.com/docs/api
+        type: Documentation
+      - url: openapi/proompty-openapi-original.yml
+        type: OpenAPI
+    description: |-
+
+      Proompty is an advanced Retrieval Augmented Generation (RAG) API designed
+      to empower users in seamlessly integrating their data and harnessing the
+      power of customized Large Language Model (LLM) prompts for interactive
+      communication. At its core, Proompty operates through a series of
+      interconnected functionalities that enable users to navigate and
+      manipulate their data effectively.
+name: Proompty
+tags:
+  - Prompts
+  - Artificial Intelligence
+image: https://kinlane-productions2.s3.amazonaws.com/apis-json/apis-json-logo.jpg
+score: 40
 common:
-  - type: Getting Started
-    url: https://platform.openai.com/docs/quickstart
+  - url: https://platform.openai.com/docs/quickstart
+    type: Getting Started
+created: '2024-06-06T00:00:00.000Z'
+modified: '2025-01-02'
+description: >-
+  Proompty is a web-based platform that offers customizable prompts and
+  exercises to inspire creativity and productivity. Users can access a wide
+  range of prompts, from writing exercises to drawing challenges, designed to
+  spark new ideas and break through mental blocks. Proompty also provides tools
+  for organizing and tracking progress, allowing users to set goals and monitor
+  their growth over time. Whether you're a writer, artist, or creator of any
+  kind, Proompty is a valuable resource for finding inspiration and staying
+  motivated in your creative pursuits.
 maintainers:
   - FN: API Evangelist
     url: http://apievangelist.com
     email: info@apievangelist.com
-aid: proompty
-score: 40
+specificationVersion: '0.18'
+type: Contract
+position: Consuming
+access: 3rd-Party
